# RT-Soft-OpenCV

./: .gitignore  README.md
SmartCamera/: CMakeLists.txt  Map.cpp  Map.h  MotionDetector.cpp  MotionDetector.h  README.md  SmartCamera.pro  main.cpp  video.avi
Task1/: CMakeLists.txt  README.md  main.cpp
Task2/: CMakeLists.txt  README.md  main.cpp
Task3.1/: main.cpp
Task3_1/: CMakeLists.txt  README.md  main.cpp
Task3_2/: CMakeLists.txt  README.md  main.cpp
Task4/: CMakeLists.txt  main.cpp
Task5/: CMakeLists.txt  README.md  main.cpp
docs/: Prilozhenie_2_3_kurs_09_03_01.doc  list_2.doc  отчет.doc
